# EasyScript

./: .editorconfig  .gitignore  AUTHORS.md  CMakeLists.txt  README.md
src/: main.cpp
src/chaiscript/dispatchkit/: dispatchkit.hpp
src/chaiscript/language/: chaiscript_engine.hpp  chaiscript_eval.hpp  chaiscript_optimizer.hpp  chaiscript_parser.hpp
src/easyscript/: all_commands.h  binding.h  event_command.cpp  event_command.h  forward.h  from_command.cpp  from_command.h  parameter.cpp  parameter.h  state.h  types.cpp  types.h  utils.cpp  utils.h
src/easyscript/commands/: call_common_event.cpp  call_common_event.h  change_face_graphic.cpp  change_face_graphic.h  change_gold.cpp  change_gold.h  command_base.h  label.cpp  label.h  message_options.cpp  message_options.h  play_bgm.cpp  play_bgm.h  play_sound.cpp  play_sound.h  show_choice.cpp  show_choice.h  show_choice_option.cpp  show_choice_option.h  show_message.cpp  show_message.h  trigger_event_at.cpp  trigger_event_at.h  unknown_branch_command.cpp  unknown_branch_command.h  unknown_command.cpp  unknown_command.h
